<resources>
    <string name="app_name">Gumber</string>
    <string name="btn_start"> Start Game </string>
    <string name="btn_results">Results</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_about">About</string>
    <string-array name="difficulty_items">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Impossible</item>
    </string-array>
    <string name="number_range_format">Guess a number in range %d to %d</string>
    <string name="turns_format">Turn %d of %d</string>
    <string name="result_format">Guessed number was %d and it was too %s.</string>
    <string name="result_high">high</string>
    <string name="result_low">low</string>
</resources>
